--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-server.port=9129
+server.port=12500
+eureka.client.service-url.defaultZone=http://192.168.31.224:10000/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address: 192.168.31.131
+spring.application.name=wechatcore-server
 
 ##jedisPool
 maxActive=8
