修改省市区属性

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,20 +4,15 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address: 192.168.31.131
 spring.application.name=wechatcore-server
 
-##jedisPool
-maxActive=8
-maxIdel=40
-maxWait=3000
-timeOut = 10000
-redisDB=2
+
 
 
 
 ####关键字
-keyWords=女神_女吊
+keyWords=
 
 ####新用户送卡券事件
-newUserGiveCouponsSourceNameAndEventName=sourceName:newUser,eventName:newUser
+newUserGiveCouponsSourceNameAndEventName=
 
 ####默认回复用户的语句
 defaultRespContent=\u6211\u597d\u50cf\u4e0d\u660e\u767d
@@ -34,43 +29,15 @@ couponsHaveGived=\u60a8\u5df2\u7ecf\u9886\u8fc7\u5361\u5238\u6216\u8005\u5361\u5
 ####卡券发放错误
 giveCouponsErr=\u554a\u5594\u007e\u963f\u901f\u592a\u5fd9\u6ca1\u6765\u5f97\u53ca\u7ed9\u7239\u9001\u5238\uff0c\u8bf7\u7239\u91cd\u65b0\u8f93\u5165\u53e3\u4ee4\uff0c\u8fd9\u6b21\u963f\u901f\u4e00\u5b9a\u6309\u65f6\u9001\u8fbe\u3002
 
-#######-----------测试 ----------------
-##redis
-redisServer=192.168.0.155
-redisPort=6379
-redisPassword=huyoucheng
-#####接入层
-accessServer=http://192.168.0.12:9001
-#####获取微信用户信息服务
-wechatUserService=http://127.0.0.1:9127
-### 获取事件源id
-getCouponSourceIdUrl=http://192.168.0.9:10018/cardManage/sourceId
-getCouponSourceIdIncludeOrderIdUrl=http://192.168.0.9:10018/cardManage/sourceIdWithOrder
-### 发卡券
-giveOutCouponsUrl=http://192.168.0.9:10018/cardManage/cardGiveOut
-### 查询是否有发卡券的资格
-isCanGiveCoupons=http://192.168.0.9:10018/cardManage/preCardGiveOut
+
+##jedisPool
+maxActive=8
+maxIdel=40
+maxWait=3000
+timeOut = 10000
+redisDB=2
+redisServer=
+redisPort=
+redisPassword=
 
 
-
-
-########-------------生产环境
-###redis
-#redisServer=r-bp1d6bacfa5f1f44.redis.rds.aliyuncs.com
-#redisPort=6379
-#redisPassword=Huyoucheng1
-###redisServer=10.132.17.238
-###redisPort=6380
-###redisPassword=huyoucheng
-######接入层
-##accessServer=http://10.169.8.148:9001
-#accessServer=http://access.ops.local:9001
-######获取微信用户信息服务
-#wechatUserService=http://10.47.161.235:9127
-#### 获取事件源id
-#getCouponSourceIdUrl=http://10.168.180.104:10018/cardManage/sourceId
-#getCouponSourceIdIncludeOrderIdUrl=http://10.168.180.104:10018/cardManage/sourceIdWithOrder
-#### 发卡券
-#giveOutCouponsUrl=http://10.168.180.104:10018/cardManage/cardGiveOut
-#### 查询是否有发卡券的资格
-#isCanGiveCoupons=http://10.168.180.104:10018/cardManage/preCardGiveOut
